--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-    "restructuredtext.confPath": "${workspaceFolder}"
+  "restructuredtext.confPath": "${workspaceFolder}",
+  "cSpell.words": [
+    "centos",
+    "Firewalld",
+    "flathub",
+    "flatpak",
+    "github",
+    "Github",
+    "instalacion",
+    "linux",
+    "shiftey"
+  ]
 }
