--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,14 @@
   "restructuredtext.confPath": "${workspaceFolder}",
   "cSpell.words": [
     "centos",
+    "dotnet",
     "Firewalld",
     "flathub",
     "flatpak",
     "github",
     "Github",
     "instalacion",
+    "Jetbrains",
     "linux",
     "shiftey"
   ]
